test/features/errors/semantic/e1057_yield_outside_generator.spl
# E1057: Yield Outside Generator

Feature: E1057 - Yield Outside Generator Function
  As a Simple compiler
  I want to detect `yield` used outside generator functions
  So that yield is only used in appropriate contexts

  Background:
    Given I have the Simple compiler
    And the compiler supports generator functions

  Scenario: Yield in regular function
    When I compile:
      '''
      fn test() -> i32:
        yield 42  # Error: not a generator function
      '''
    Then I should see error E1057 at line 2
    And the error message should be "`yield` can only be used inside generator functions"
    And the label should indicate "not in generator"
    And the help should suggest "use `yield` only in functions marked as generators"

  Scenario: Yield in closure
    When I compile:
      '''
      fn test():
        val f = \:
          yield 42  # Error: closures are not generators
      '''
    Then I should see error E1057 at line 3

  Scenario: Yield at module level
    When I compile:
      '''
      yield 42  # Error: not in any function
      '''
    Then I should see error E1057

  Scenario: Valid yield in generator
    When I compile:
      '''
      gen fn count_to_ten():
        for i in 0..=10:
          yield i  # OK: generator function
      '''
    Then compilation should succeed

  Scenario: Multiple yields in generator
    When I compile:
      '''
      gen fn fibonacci():
        var a = 0
        var b = 1
        loop:
          yield a
          val next = a + b
          a = b
          b = next
      '''
    Then compilation should succeed

  Scenario: Generator with conditional yield
    When I compile:
      '''
      gen fn even_numbers(max: i32):
        for i in 0..max:
          if i % 2 == 0:
            yield i  # OK: conditional yield
      '''
    Then compilation should succeed

  Scenario: Generator return vs yield
    When I compile:
      '''
      gen fn maybe_generate(condition: bool):
        if condition:
          yield 42
        else:
          return  # OK: early return from generator
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        yield 42
      '''
    Then I should see error E1057
    And the error message should contain "제너레이터 외부에서 Yield"
